--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,900;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
 <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="header">
+<header class="header">
         <div class="conteiner header-conteiner">
         <nav class="header-navigations">
             <a href="" class="logo link">
@@ -21,7 +25,7 @@
             <ul class="header-list list">
             <li class="header-item">
             
-            <a href="./index.html" class="header-link link current-link">Студия</a>
+            <a href="./index.html" class="header-link link current-link current">Студия</a>
             </li> 
             <li class="header-item">
             <a href="./portfolio.html" class="header-link link">Портфолио</a>
@@ -48,20 +52,20 @@
 </svg>    
 <a class="header-tel header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a></li></ul>  
 </div>
-    </header>
+</header>
 
 
-    <main> 
+<main> 
         <!--перша секція-->
-        <section class="section-hero">
+<section class="section-hero">
             <div class="conteiner">
             <h1 class="pre-title">Эффективные решения для вашего бизнеса </h1>
-            <button class="main-btn" type="button">Заказать услугу</button>
+            <button class="main-btn" type="button" data-modal-open>Заказать услугу</button>
         </div>
         </section>
 
         <!-- друга секція перелік переваг -->
-        <section class="section"> 
+<section class="section"> 
            <div class="conteiner ">
         <h2 class="visually-hidden">перлік</h2>
 
@@ -126,21 +130,30 @@
             <div class="conteiner">
             <h2 class="representation-title">Чем мы занимаемся</h2>
             <!-- перелик послуг -->
-            <ul class="representation-item list">
-                <li class="representation-item-img">
-                    <img src="./images/img.jpg" alt="печатает на клавиатуре" width="370" height="294"></li>  
-                <li class="representation-item-img">
-                    <img src="./images/img2.jpg" alt="печатает на клавиатуре с тел вруках" width="370" height="294"></li>
-                <li class="representation-item-img">
-                    <img src="./images/img3.jpg" alt="печатает на планшете" width="370" height="294"></li>
-                   
-            </ul>
+<ul class="representation-item list">
+<li class="representation-item-img">
+    <div class="representation-top">
+<img src="./images/img.jpg" alt="печатает на клавиатуре" width="370" height="294">
+<p class="representation-top-text">Десктопные приложения</p></div>
+</li>  
+<li class="representation-item-img">
+    <div class="representation-top">
+<img src="./images/img2.jpg" alt="печатает на клавиатуре с тел вруках" width="370" height="294">
+<p class="representation-top-text">Мобильные приложения</p></div>
+
+</li>
+<li class="representation-item-img">
+    <div class="representation-top">
+    <img src="./images/img3.jpg" alt="печатает на планшете" width="370" height="294">
+    <p class="representation-top-text">Дизайнерские решения</p>
+</div></li>                 
+</ul>
         </div>
         </section>
    
 
         <!-- наша команда четврта секція-->
-        <section class="section team">
+<section class="section team">
 
             <div class="conteiner">
 
@@ -152,7 +165,7 @@
             <img class="img-team"
             src="./images/img.pr.1.jpg" alt="рук проектов" width="270" height="260">
             <h3 class="team-name">Игорь Демьяненко</h3>
-            <p class="team-position" lang="en">Product Designer</p>
+            <p class="team-position" lang="en">Product Designer</p> 
             <!--задання социальних мереж-->
             <ul class="team-item-list social-list list">
             <li class="social-item">
@@ -359,7 +372,7 @@
 </div>
         </section>
 
-       </main>
+</main>
 
 <footer class="footer">
     <div class="conteiner footer-item">
@@ -414,5 +427,12 @@
 </div>
     </footer>
 
+    <div class="backdrop is-hidden" data-modal>
+<div class="modal">
+    <button type="button" class="close-btn" data-modal-close>x</button>
+
+</div>
+</div>
+<script src="./js/modal.js"></script>
 </body>
 </html>
